changement tomate en fraise

--- a/exercices html.html
+++ b/exercices html.html
@@ -10,7 +10,7 @@
             <p>Il existe en permaculture des associations de fruits et légumes pour améliorer la production et protéger ces derniers.</p>
         <h2>L'association des <mark>fruits</mark> et <mark>légumes</mark></h2>
             <ul>
-                    <h3>Les associations de la tomates</h3>
+                    <h3>Les associations de la fraise</h3>
                         <li>ail</li>
                         <li>asperges</li>  
                     <h3>Les associations des poireaux</h3>   
